# ca-property-tax

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  index.js  package.json  pyproject.toml
.github/: FUNDING.yml
app/: index.html
cptlib/: README  README.md  parcels.py  parsers.py  scrapers.py
data/: build.sh
functions/: index.js  lookup.js  package.json
outputs/: README.md
sacramento/: parse.py
scrapers/: collate_outputs.py  example_data.csv
scrapers/alameda/: README.md  parse.py  scrape.py
scrapers/butte/: README.md  create_parcels_db.py  export_parcels_db.py  parse.py  scrape.py
scrapers/contra_costa/: README.md  parse.py  scrape.py
scrapers/fresno/: README.md  parse.py  scrape.py
scrapers/los_angeles/: README.md  parse.py  scrape.py
scrapers/marin/: README.md  parse.py  scrape.py
scrapers/monterey/: README.md  parse.py  scrape.py
scrapers/napa/: README.md  parse.py  scrape.py
scrapers/orange/: parse.py  scrape.py
scrapers/riverside/: README.md  parse.py  scrape.py
scrapers/sacramento/: scrape.py
scrapers/san_bernadino/: README.md  parse.py  scrape.py
scrapers/san_diego/: README.md  create-apn-list.js  package.json  parse.js  scrape.js  scrape.py  searchFields.json
scrapers/san_francisco/: README.md  parse.py  scrape.py
scrapers/san_luis_obispo/: README.md  parse.py  scrape.py  scrape.sh
scrapers/san_mateo/: parse.py  run.py  scrape.py
scrapers/santa_clara/: parse.py  scrape.py
scrapers/santa_cruz/: README.md  parse.py  scrape.py
scripts/: validate.py
server/: handlers.js  index.js  lookup.js
(+9 files in other folders)
