[tool.poetry]
name = "prop13"
version = "0.1.0"
description = ""
authors = ["Ian Webster <ianw_github@ianww.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.2"
requests = "^2.24.0"
shapely = "^1.7.1"
pyppeteer = "^0.2.2"
pyproj = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
